Some test cleanup